# gmds

./: .gitignore  .gitlab-ci.yml  404.html  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  _clang-format  build-darwin-sequoia-m1-zzll6qv  codecov.yml  configure.sh  gmdsConfig.cmake.in  index.html  index.md  mkdocs.yml  sitemap.xml  unit_test_config.h.in
Elg3D/: CMakeLists.txt  README.md
Elg3D/src/: main_compare_3d.cpp  main_dummy.cpp  main_dummy2.cpp  main_elg2d.cpp  main_elg2d_imr2019.cpp  main_elg3d.cpp  main_elg3d_imr2019.cpp  main_exodus_compare2d.cpp  main_exodus_compare3d.cpp  main_exodus_pixelVF2d.cpp  main_exodus_pixelVF3d.cpp  main_exodusreader2d.cpp  main_exodusreader3d.cpp  main_pixelVF2d.cpp  main_pixelVF3d.cpp
Elg3D/test/: AssignCellsTest.h  BadPillowingTest.h  BoundingBoxGeomAssociationTest.h  CMakeLists.txt  DefeaturingTest.h  DummyTest.h  EigenTest.h  ExtractGeomTest.h  FracPresEnforcementTest.h  FracPresTest.h  GCOTest.h  InihTest.h  InitDataTest.h  InterfaceNodesPosSmoothVFTest.h  InterfaceNodesPosTest.h  ManifoldDetectionTest.h  MaterialAssignmentTest.h  MaterialGradientComputationTest.h  MaterialInterfacesTest.h  MoveToNewPosTest.h  OptimizationSmoothTest.h  PillowingTest.h  Refinement.h  SmartLaplacianTest.h  SubsetProblemTest.h  ToolsTest.h  main.cpp
ant_colony/: CMakeLists.txt
ant_colony/src/: Env.cpp  main.cpp
ant_colony/tst/: CMakeLists.txt  Env_test.h  main_test.cpp
blockMesher/tst/: BlockMesher2DTestSuite.h  BlockMesherTestSuite.h  CMakeLists.txt  main_test.cpp
blocking/: CMakeLists.txt  README.md
blocking/src/: Blocking.cpp  CGNSWriter.cpp  CGNSWriter3D.cpp  CurvedBlocking.cpp  CurvedBlockingClassifier.cpp  InputMarkedDarts.cpp  InsertSheet.cpp  SheetCollapse.cpp  SheetInsert.cpp  WriterDartsVTK.cpp  blocking_exe.cpp  main.cpp  main_S3.cpp  main_ant_colony_prep.cpp  main_cgns.cpp
blocking/tst/: BlockingTestSuite.h  CGALTestSuite.h  CGNSWriterTestSuite.h  CMakeLists.txt  ClassificationTestSuite.h  CurvedBlockingClassificationTestSuite.h  CurvedBlockingTestSuite.h  ExecutionActionsTestSuite.h  InputMarkedDartsTestSuite.h  InsertSheetTestSuite.h  PolyCubePipelineTestSuite.h  SheetInsertTestSuite.h  SheetOperationTestSuite.h  WriterDartsVTKTestSuite.h  main_test.cpp  util_functions.h
cad/: CMakeLists.txt  README.md
cad/src/: FACCurve.cpp  FACManager.cpp  FACPoint.cpp  FACSurface.cpp  FACVolume.cpp  GeomMeshLinker.cpp  GeomSmoother.cpp  GeomSurface.cpp  smoothy.cpp
cad/tst/: CMakeLists.txt  FACManagerTestSuite.h  GeomLinkerTestSuite.h  GeomSmootherTestSuite.h  GeomTopologyTestSuite.h  main_test.cpp
claire/: CMakeLists.txt  README.md
claire/src/: AbstractAeroBoundaries.cpp  AbstractAeroPipeline.cpp  AbstractLevelSet.cpp  AbstractPatternEdge.cpp  AbstractPatternNode.cpp  AbstractSmoothLineSweeping_2D.cpp  AdvectedPointRK4_2D.cpp  AdvectedPointRK4_3D.cpp  AeroBoundaries_2D.cpp  AeroBoundaries_3D.cpp  AeroEllipticSmoothing_2D.cpp  AeroEllipticSmoothing_2D.h.cpp  AeroException.cpp  AeroExtrusion_2D.cpp  AeroExtrusion_3D.cpp  AeroMeshQuality.cpp  AeroPipeline2D.cpp  AeroPipeline3D.cpp  AeroPipeline_2D.cpp  AeroPipeline_3D.cpp  Blocking3D.cpp  CGNSWriter3D.cpp  ComputeBezierCtrlPtstoInterpolateSurface.cpp  ComputeBezierCurveCtrlPtstoInterpolateCurve.cpp  ComputeBezierDegree_3D.cpp  ControlPointsSmoothing_2D.cpp  DiffusionEquation2D.cpp  DistanceMap.cpp  FastLocalize.cpp  Front.cpp  FrontEdgesNodesClassification_3D.cpp  Front_3D.cpp  GradientComputation2D.cpp  GradientComputation3D.cpp  GradientComputation_2D.cpp  GradientComputation_3D.cpp  Grid_Smooth2D.cpp  IntervalAssignment_2D.cpp  IntervalAssignment_3D.cpp  LayerStructureManager_3D.cpp  (+43 more)
claire/tst/: AeroBoundariesTestSuite.h  AeroMeshQualityTestSuite.h  AeroPipelineTestSuite.h  Blocking3DTestSuite.h  CMakeLists.txt  ClaireTestSuite.h  ComputeBezierCtrlPtstoInterpolateSurfaceTestSuite.h  ComputeBezierCurveCtrlPtstoInterpolateCurveTestSuite.h  ComputeBezierDegree_3DTestSuite.h  DiffusionEquation2DTestSuite.h  DistanceMapTestSuite.h  FastLocalizeTestSuite.h  FrontTestSuite.h  Front_3DTestSuite.h  GradientComputation2DTestSuite.h  GradientComputation3DTestSuite.h  GradientComputationTestSuite.h  LayerStructureManager_3DTestSuite.h  LevelSet2DTestSuite.h  LevelSetTestSuite.h  MFEMMeshWriterTestSuite.h  MeshAlignmentTestSuite.h  NodeNeighbourhoodOnFront_3DTestSuite.h  PointFollowingVectorField2DTestSuite.h  PointFollowingVectorFieldTestSuite.h  RefinementBetaBlock3DTestSuite.h  RefinementBetaTestSuite.h  SU2WriterTestSuite.h  SmoothLineSweepingTestSuite.h  TransfiniteInterpolation_3DTestSuite.h  UtilsTestSuite.h  main_test.cpp
doc/: CMakeLists.txt  index.md
dualBlocking/: CMakeLists.txt  README.md
dualBlocking/src/: BoundarySurfaceCreator.cpp  DualBlockingSession.cpp  DualSheet.cpp  DualSheetCreator.cpp  DualSurfaceCreator.cpp  EdgeDiscrAlgo.cpp  main.cpp
dualBlocking/tst/: CMakeLists.txt  DuBloTestSuite.h  main_test.cpp
hybridMeshAdapt/: CMakeLists.txt  README.md
hybridMeshAdapt/src/: AccessBehavior.cpp  CavityOperator.cpp  CommonInfo.cpp  DelaunayPointInsertion.cpp  EdgeCollapse.cpp  EdgeInsertion.cpp  FrontalInsertion.cpp  ICriterion.cpp  ISimplexMeshIOService.cpp  MeshTransformation.cpp  Metric.cpp  MetricAdaptation.cpp  MetricFFPointgeneration.cpp  Octree.cpp  PointInsertion.cpp  PointSmoothing.cpp  SimplexMesh.cpp  SimplicesCell.cpp  SimplicesNode.cpp  SimplicesTriangle.cpp  (+2 more)
ig/: CMakeLists.txt  README.md
igalgo/: CMakeLists.txt  README.md
io/: CMakeLists.txt  README.md
kmds/: CMakeLists.txt  README.md
math/: CMakeLists.txt  README.md
mctsblock/: CMakeLists.txt  config.h.in
medusa/: CMakeLists.txt  README.md
milp/: CMakeLists.txt
paul/: CMakeLists.txt  README.md
polyblock/: CMakeLists.txt  README.md
pyMedusa/: CMakeLists.txt  setup.py
pygmds/: CMakeLists.txt  README.md  pyproject.toml  setup.py
services/: CMakeLists.txt  README.md
sheet/: CMakeLists.txt  README.md
singGraphBuild/: CMakeLists.txt  README.md
smoothy/: CMakeLists.txt  README.md
test_link/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  README.md
(+3544 files in other folders)
